Fixed manged overlay covers screen

--- a/styles/estreUi.css
+++ b/styles/estreUi.css
@@ -570,7 +570,7 @@ main#instantDoc > section > div.container > article[data-on-top="1"] { z-index: 
 /* managed overlay content page area */
 nav#managedOverlay { }
 nav#managedOverlay > section { }
-nav#managedOverlay > section > div.container { position: fixed; z-index: 200; top: initial; bottom: initial; left: 0; right: 0; height: 0; overflow: visible; box-sizing: border-box; }
+nav#managedOverlay > section > div.container { position: fixed; z-index: 200; top: initial; bottom: initial; left: 0; right: 0; height: 0; padding-top: 0; padding-bottom: 0; overflow: visible; box-sizing: border-box; }
 nav#managedOverlay > section > div.container.top { top: 0; width: fit-content; height: fit-content; margin: 0 auto; }
 nav#managedOverlay > section > div.container.bottom { bottom: 0; width: fit-content; height: fit-content; margin: 0 auto; }
 nav#managedOverlay > section > div.container.slider { transition-timing-function: ease; transition-duration: 0.5s; will-change: auto; }
